# two-phase-commit-fastapi

./: docker-compose-test.yml  docker-compose.yml
book-service/: .env  .env.test  Dockerfile  (+2 more)
common/: .gitignore  pyproject.toml
common/common/: app.py
common/common/core/: database.py  logging.py  settings.py
common/common/middlewares/: logging.py
common/common/models/: base.py
common/common/schemas/: purchase.py
common/common/tests/: db_conf.py
coordinator/: .env  .env.test  Dockerfile  pyproject.toml
coordinator/coordinator/: main.py
coordinator/coordinator/clients/: participants.py
coordinator/coordinator/core/: exceptions.py  settings.py
coordinator/coordinator/routes/: orders.py
coordinator/coordinator/schemas/: purchase.py
coordinator/coordinator/services/: purchases.py
user-service/: .env  .env.test  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  wait-for-db.sh
user-service/migrations/: env.py
user-service/migrations/versions/: 52b6c0f6c7c5_create_user_table.py  b493983657d1_change_balance_datatype.py  f66ac93a3482_add_timestamp_columns.py
user-service/tests/: conftest.py  test_user_routes.py
user-service/tests/test_routes/: test_user_routes.py
user-service/tests/test_services/: test_user_service.py
user-service/user_service/: main.py
user-service/user_service/core/: database.py  logging.py  settings.py
user-service/user_service/middlewares/: logging.py
user-service/user_service/models/: base.py  user.py
user-service/user_service/routes/: purchase.py  users.py
user-service/user_service/schemas/: user.py
user-service/user_service/services/: purchases.py  users.py
(+12 files in other folders)
