[tool.poetry]
name = "coordinator"
version = "0.1.0"
description = ""
authors = ["Misha4231 <mishagalko1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.136.1"
httpx = "^0.28.1"
uvicorn = "^0.46.0"
common = "^0.1.1"

[tool.poetry.group.local.dependencies]
common = { path = "../common", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
